# DllExportCpp

./: .gitignore
CSharpCode/: Evaluator.sln
CSharpCode/EvaluatorCppCli/: Evaluator.cpp  Evaluator.h  EvaluatorCppCli.vcxproj  EvaluatorCppCli.vcxproj.filters  EvaluatorCppCliExports.h  EvaluatorFunctions.cpp  EvaluatorFunctions.h  EvaluatorManaged.cpp  EvaluatorManaged.h  conanfile.py
CSharpCode/EvaluatorCs/: CFunctions.cs  Calculator.cs  EvaluatorCs.csproj
CSharpCode/Ipc/: IpcClient.cs  IpcServer.cs
CSharpCode/TestProject/: EvaluatorManagedTests.cs  TestProject.csproj
CppCode/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
CppCode/src/: CMakeLists.txt
CppCode/src/Tools/: Version.rc.in
CppCode/test/: CMakeLists.txt
CppCode/test/UnitTest/: CMakeLists.txt  EvaluatorTests.cpp  README.md  main.cpp
